--- a/main.css
+++ b/main.css
@@ -18,11 +18,10 @@ p {
 } 
 
 .testa .top-nav {
-	position: absolute;
-	width: 1000px;
+	width: 100%;
+	max-width: 1000px;
 	height: 100%;
-	left: 50%;	
-	margin-left: -500px;
+    margin: 0 auto;
 
 }
 
@@ -30,7 +29,7 @@ p {
 	fill: #FFFFFF;
 	float: left;
 	diplay: inline;
-	margin-top: 13px;
+	margin-left: 3%;
 }
 
 .testa .top-nav .navig {
@@ -41,20 +40,64 @@ p {
 	text-decoration: none;
 	display: inline-block;
 	float: right;
-	margin-left: 6%;
+	margin-left: 5%;
 	color: #FFFFFF;
-	font-size: 20px;
+	font-size: 18px;
 }
+
+.testa .top-nav .navig li a:first-child {
+	margin-right: 3%;
+} 
 
 .testa .top-nav .hamburger-nav {
 	display: none;
 }
 
 
-.article-header-main {
+.article {
 	background-image: url("ristorante.jpg");
 	width: 100%;
 	height: 100vh;
 	background-position: 60%;
 	overflow: hidden;
+}
+
+#central {
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
+#calendar-container {
+    padding: 10px;
+    width: 210px;
+    height: 240px;
+    text-align: center;
+    border: 1px solid #eee;
+    border-radius: 10px;
+    font-size: 16px;
+	color: #FFFFFF;
+    background-color: #000000;
+	opacity: 0.5;
+	margin-top: 130px;
+	margin-left: 3%;
+}
+
+#calendar-container {
+    padding: 0;
+    margin-bottom: 10px;
+}
+
+#calendar-month-year {
+    margin: 5px;
+}
+
+#calendar-dates table tr td{
+    padding: 5px;
+}
+
+@media (max-width: 1025px) {
+	
+.testa .top-nav .navig li a {	
+	margin-left: 3%;
+}
 }
