--- a/main.css
+++ b/main.css
@@ -13,9 +13,8 @@ body {
     font-size: 1.1em;
 }
 
-
 .testa {
-   position: fixed;
+   position: absolute;
    width: 100%;
    height: 115px;
    text-align: center;
@@ -23,39 +22,47 @@ body {
    opacity: 0.6;
 } 
 
-.testa .top-nav {
-	width: 90%;
-	max-width: 1200px;
-	height: 100%;
-    margin: 0 auto;
-
+#pizza {
+	position: absolute;
+    margin: 60px;
 }
 
-.testa .top-nav .page-logo {
+.top-nav {
+	width: 1100px;
+	height: 115px;
+	position: absolute;
+	left: 50%;
+	margin-left: -550px;
+
+}
+/*
+.page-logo {
 	fill: #FFFFFF;
 	float: left;
-	margin-top: -8px;
-	margin-left: 20px;
-}
+	margin-top: 33px;
+} */
 
-.testa .top-nav .navig {
+.top-nav .navig {
 	list-style: none;
-	margin-top: 60px;
+	margin-top: 72px;
 }
 
-.testa .top-nav .navig li a {
+.top-nav .navig li a {
 	text-decoration: none;
 	display: inline-block;
 	float: right;
 	color: #FFFFFF;
-	font-size: 1.3em;
+	font-size: 1em;
+	padding: 11px;
 }
 
-.testa .top-nav .navig li a:first-child {
-	margin-left: 3%;
-} 
+.top-nav .navig li a:hover {
+	background-color: #FFFFFF;
+	color: #000000;
+	opacity: 0.7;
+}
 
-.testa .top-nav .hamburger-nav {
+.top-nav .hamburger-nav {
 	display: none;
 }
 
@@ -98,7 +105,9 @@ body {
 	height: auto;
 }
 
+/* TO BE CONTINUED...
 
+@MEDIA ETC. */
 
 
 
