--- a/main.css
+++ b/main.css
@@ -20,20 +20,22 @@ body {
    text-align: center;
    background-color: #000000;
    opacity: 0.6;
+   z-index: 200;
 } 
 
 #pizza {
 	position: fixed;
     margin: 10px 0px 0px 50px;
+	z-index: 201;
 }
 
 .top-nav {
-	width: 1100px;
+	width: 1000px;
 	height: 115px;
 	position: absolute;
 	left: 50%;
-	margin-left: -550px;
-
+	margin-left: -500px;
+    z-index: 202;
 }
 /*
 .page-logo {
@@ -53,7 +55,7 @@ body {
 	float: right;
 	color: #FFFFFF;
 	font-size: 1.1em;
-	padding: 17px 14px 13px 14px;
+	padding: 17px 14px 12px 14px;
 	font-style: italic;
 	opacity: 0.9;
 }
@@ -84,8 +86,7 @@ body {
 	color: #FFFFFF;
     margin: 38px 0px 0px 270px;
     opacity: 0.8;
-	
-	
+    z-index: 203;	
 }
 
 #welcome h1 {
@@ -102,7 +103,7 @@ body {
     margin: 0 auto;	
 	padding-left: 190px;
 	width: 90%;
-	max-width: 1200px;	
+	max-width: 1000px;	
 }
 
 
@@ -119,9 +120,9 @@ body {
 }
 
 .articles article.art {
-	width: 33%;
+	width: 48%;
 	height: auto;
-	padding: 2%;
+	padding: 10px;
 	display: inline-block;
 }
 
@@ -138,6 +139,86 @@ body {
 	width: 100%;
 	height: auto;
 }
+
+.form-wrap {
+	margin: 10px;
+	border-radius: 5px;
+	padding: 10px;
+}
+
+.form-block {
+	width: 100%;
+	height: 40px;
+	margin-bottom: 5px;
+	position: relative;
+}
+
+.textarea-block {
+	width: 100%;
+	height: 100px;
+	margin-bottom: 10px;	
+	position: relative;
+}
+
+.label {
+	width: 100px;
+	height: 30px;
+	border-radius: 5px;
+	border: 1px solid #A1A1A1;
+	padding: 3px 0px 0px 10px;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+input[type="submit" i] {
+	width: 100px;
+	height: 30px;
+	border-radius: 5px;
+    border: 1px solid #A1A1A1;
+margin-left: 120px;	
+}
+
+input[type="submit" i]:hover {
+	-webkit-box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.75);
+	font-weight: bold;
+}
+
+input#name, input#email {
+	width: 270px;
+	height: 30px;
+	border-radius: 5px;
+	border: 1px solid #A1A1A1;
+	padding-left: 10px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin-left: 120px;
+}
+
+textarea#message {
+    position: absolute;
+    top: 0;
+    left: 0;
+	margin-left: 120px;
+    height: 100px;
+    width: 500px;
+	border-radius: 5px;	
+	border: 1px solid #A1A1A1;
+	font-family: 'Slabo 27px', serif;
+	color: #37474F;
+	font-size: 1em;
+	padding: 3px 10px 3px 10px;
+}
+
+.shadow {
+	-webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+}
+
 
 /* TO BE CONTINUED...
 
