--- a/main.css
+++ b/main.css
@@ -109,9 +109,14 @@ body {
 
 .articles {
     clear: both;
-    margin: 0px -50px 0px 50px;
+    margin: 0px -50px 50px;
     opacity: 0;	
+	padding-top: 50px;
 	transition: all 400ms ease-in;
+}
+
+#contact-form {
+	margin-top: 100px;
 }
 
 .js-articles-animation {
@@ -217,6 +222,25 @@ textarea#message {
 	-webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+}
+
+.thanks {
+	z-index: 300;
+	width: 500px;
+	height: 200px;
+	background-color: #2E35FF;
+	color: #EDED1C;
+	text-align: center;
+	opacity: 0.4;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin: -100px 0px 0px -250px;
+	padding: 80px;
+}
+
+.thanks ul li {
+	list-style: none;
 }
 
 
