--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ body {
 }
 
 .top-nav {
-	width: 1000px;
+	width: 1200px;
 	height: 115px;
 	position: absolute;
 	left: 50%;
@@ -228,26 +228,55 @@ textarea#message {
 	z-index: 300;
 	width: 500px;
 	height: 200px;
-	background-color: #2E35FF;
-	color: #EDED1C;
-	text-align: center;
-	opacity: 0.4;
+	background-color: #000000;
+	color: #FFFFFF;
+	opacity: 0.5;
 	position: fixed;
+	border-radius: 5px;
+	font-size: 30px;
 	top: 50%;
 	left: 50%;
 	margin: -100px 0px 0px -250px;
-	padding: 80px;
+ 
 }
 
-.thanks ul li {
-	list-style: none;
+.thanks p#thank-for {
+	width: 100%;
+	text-align: center;
+	margin-top: 50px;
+	font-style: italic;	
 }
 
+.thanks p#close {
+	border-radius: 25px;
+	border: 2px solid #FFFFFF;
+	padding: 5px 15px 5px 15px;
+	position: absolute;
+	text-align: center;
+	width: 100px;
+	top: 130px;
+	left: 50%;
+	margin-left: -50px;
+}
 
-/* TO BE CONTINUED...
+.thanks p#close:hover {
+	font-weight: bold;
+	width: 110px;
+	margin-left: -55px;
+	cursor: pointer;
+}
 
-@MEDIA ETC. */
+.thanks ul li { list-style: none; }
 
+@media (max-width: 1450px) {
+	.top-nav { width: 1000px; }
+}
+
+@media (max-width: 1050px) {
+	.top-nav { width: 900px; }
+    .articles-wrapper { max-width: 800px; }	
+	textarea#message { width: 270px; }
+}
 
 
 
